link animations and code organization

--- a/app/index.html
+++ b/app/index.html
@@ -31,10 +31,76 @@
         <h1 class="title-actual">Miriam<br />Kennedy<br />Nadler</h1>
       </div>
       <div class="about-container"> 
-        <p>I am a web designer and web developer based in Brooklyn, NY. My toolkit includes HTML5, CSS3, Sass, JavaScript, jQuery, and WordPress. I mostly design in Illustrator and on paper.</p>
-        <p>I am currently available for freelance work. If you'd like to get in touch, please <a href="#">email me</a>.</p>
+        <p>I code HTML5, CSS3, Sass, JavaScript, jQuery, PHP, WordPress. <br/ >I design on paper and in illustrator.</p>
+        <p>If you'd like to get in touch, please <a href="#">email me</a>.</p>
+      </div>
     </header>
+    <section>
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+            <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
 
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div data-site="blaudit">
+          <h2>Blazing Audit</h2>
+          <p>Design, Development</p>
+        </div>
+      </div>
+
+
+
+    </section>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
