Responsive styles and portfolio item display

--- a/app/index.html
+++ b/app/index.html
@@ -28,76 +28,27 @@
 
     <header>
       <div class="title-container">
-        <h1 class="title-actual">Miriam<br />Kennedy<br />Nadler</h1>
+        <h1 data-title="Miriam Kennedy Nadler" class="title-actual">Miriam Kennedy Nadler</h1>
       </div>
       <div class="about-container"> 
-        <p>I code HTML5, CSS3, Sass, JavaScript, jQuery, PHP, WordPress. <br/ >I design on paper and in illustrator.</p>
-        <p>If you'd like to get in touch, please <a href="#">email me</a>.</p>
+        <p>I use HTML5, CSS3/Sass, JavaScript/jQuery, and PHP.
+        <br/ >I design on paper and in browser.</p>
+        <p>Want to get in touch? <a href="#">Email me</a>.</p>
       </div>
     </header>
     <section>
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
+      <div class="portfolio">
+        <article data-site="blaudit">
+        </article>
+        <article>
+        </article>
+        <article>
+        </article>
+        <article>
+        </article>
+        <article>
+        </article>
       </div>
-            <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
-      <div class="portfolio-item">
-        <div data-site="blaudit">
-          <h2>Blazing Audit</h2>
-          <p>Design, Development</p>
-        </div>
-      </div>
-
 
 
     </section>
