Adding more responsive styles

--- a/app/index.html
+++ b/app/index.html
@@ -37,17 +37,26 @@
       </div>
     </header>
     <section>
-      <div class="portfolio">
-        <article data-site="blaudit">
+      <div class="portfolio" id="slidr-portfolio">
+        <article data-site="blaudit" data-slidr="blaudit">
+          <div class="portfolio-image"></div>
+          <div class="portfolio-caption"></div>
         </article>
-        <article>
+        <article id="merritkopas" data-slidr="mkopas">
         </article>
-        <article>
+        <article id="howmuchsunlight" data-slidr="howmuch">
         </article>
-        <article>
-        </article>
-        <article>
-        </article>
+      </div>
+      <div class="test-slidr" id="slidr-test">
+        <div data-slidr="one">
+          one
+        </div>
+        <div data-slidr="two">
+          two
+        </div>
+        <div data-slidr="three">
+          three
+        </div>
       </div>
 
 
