--- a/app/index.html
+++ b/app/index.html
@@ -18,49 +18,72 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
-    <!--<script src="//use.typekit.net/qbz3fbu.js"></script>
-    <script>try{Typekit.load();}catch(e){}</script>-->
+    <script src="//use.typekit.net/qbz3fbu.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <header>
-      <div class="title-container">
-        <h1 data-title="Miriam Kennedy Nadler" class="title-actual">Miriam Kennedy Nadler</h1>
-      </div>
-      <div class="about-container"> 
-        <p>I use HTML5, CSS3/Sass, JavaScript/jQuery, and PHP.
-        <br/ >I design on paper and in browser.</p>
-        <p>Want to get in touch? <a href="#">Email me</a>.</p>
-      </div>
-    </header>
-    <section>
-      <div class="portfolio" id="slidr-portfolio">
-        <article data-site="blaudit" data-slidr="blaudit">
-          <div class="portfolio-image"></div>
-          <div class="portfolio-caption"></div>
-        </article>
-        <article id="merritkopas" data-slidr="mkopas">
-        </article>
-        <article id="howmuchsunlight" data-slidr="howmuch">
-        </article>
-      </div>
-      <div class="test-slidr" id="slidr-test">
-        <div data-slidr="one">
-          one
+    <section class="top">
+      <header>
+        <div class="intro">
+          <h1 id="header-actual">Miri.Codes</h1>
+          <p><span>That's me. My name is Miriam Nadler.</span><br> <span>I code. I also design.</span><br> <span>I'm especially interested in typography, Sass, and user-aware design methodologies.</span></p>
         </div>
-        <div data-slidr="two">
-          two
+        <div id="ghost"></div>
+        <div class="intro-mirror">
         </div>
-        <div data-slidr="three">
-          three
-        </div>
+      </header>
+      <div class="text-column">
+        <h2>Code</h2>
+        <!--<p>HTML5 <br>CSS3 + Sass <br>JavaScript + jQuery <br> PHP + WordPress</p><br>
+        <p>This site was built with HTML5, CSS3, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p><br>
+        <a href="#">See site github repo</a>-->
+        <p>I code in HTML5, CSS3/Sass, JavaScript/jQuery, and PHP.</p>
+        <p>This site was built with HTML5, CSS3, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p>
+        <a href="#">See GitHub repository.</a>
       </div>
-
-
+      <div class="text-column">
+        <h2>Design</h2>
+        <!--<p>Paper <br>Adobe Suite <br>In-Browser <br>Responsive + User-Aware</p><br>-->
+        <p>I use grid paper, pencils, and Adobe Creative Suite for my visual designs.</p>
+        <p>I designed this site with layout sprints, Illustrator mockups, and an in-browser iterative approach.</p>
+        <a href="#">See site sketches.</a>
+      </div>
+      <div class="text-column">
+        <h2>&c.</h2>
+        <span>Email </span><a class="email" href="#">hello@miri.codes</a><br>
+        <span>Twitter </span><a class="twitter" href="#">@antimytheme</a><br>
+        <span>GitHub </span><a class="github" href="#">mknadler</a>
+      </div>
     </section>
+    <section class="projects">
+      <h1>Projects</h1>
+      <div class="project">
+        <span>Blazing Audit</span>
+        <p>Design & Development. <br>Custom WordPress site for a small business.</br></p>
+        <a href="#">View site</a>
+      </div>
+        <div class="project">
+        <span>How Much Sunlight</span>
+        <p>Design & Development. <br>Calculates amount of sunlight remaining in the day.</br></p>
+        <a href="#">View site</a>
+      </div>
+      <div class="project">
+        <span>Modular Tone</span>
+        <p>Design. <br>Representing sound in shape and shape in sound.</br></p>
+        <a href="#">View site</a>
+      </div>
+      <div class="project">
+        <span>mkopas.net</span>
+        <p>Design & Development. <br>Portfolio site for a game designer.</br></p>
+        <a href="#">View site</a>
+      </div>
+    </section>
+    <footer></footer>
+
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
