Refactoring and reorganizing code

--- a/app/index.html
+++ b/app/index.html
@@ -61,22 +61,22 @@
     </section>
     <section class="projects">
       <h1>Projects</h1>
-      <div class="project">
+      <div class="project project-blaudit">
         <span>Blazing Audit</span>
         <p>Design & Development. <br>Custom WordPress site for a small business.</br></p>
         <a href="#">View site</a>
       </div>
-        <div class="project">
+        <div class="project project-sunlight">
         <span>How Much Sunlight</span>
         <p>Design & Development. <br>Calculates amount of sunlight remaining in the day.</br></p>
         <a href="#">View site</a>
       </div>
-      <div class="project">
+      <div class="project project-modular">
         <span>Modular Tone</span>
         <p>Design. <br>Representing sound in shape and shape in sound.</br></p>
         <a href="#">View site</a>
       </div>
-      <div class="project">
+      <div class="project project-mkopas">
         <span>mkopas.net</span>
         <p>Design & Development. <br>Portfolio site for a game designer.</br></p>
         <a href="#">View site</a>
