Cleaned, stable version

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>novemberportfolio</title>
-    <meta name="description" content="">
+    <title>miri.codes</title>
+    <meta name="description" content="Miriam Nadler | Web Portfolio">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -32,29 +32,27 @@
           <h1 id="header-actual">Miri.Codes</h1>
           <p><span>That's me. My name is Miriam Nadler.</span><br> <span>I code. I also design.</span><br> <span>I'm especially interested in typography, Sass, and user-aware design methodologies.</span></p>
         </div>
+        <!--
         <div id="ghost"></div>
         <div class="intro-mirror">
         </div>
+      -->
       </header>
       <div class="text-column">
         <h2>Code</h2>
-        <!--<p>HTML5 <br>CSS3 + Sass <br>JavaScript + jQuery <br> PHP + WordPress</p><br>
-        <p>This site was built with HTML5, CSS3, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p><br>
-        <a href="#">See site github repo</a>-->
         <p>I code in HTML5, CSS3/Sass, JavaScript/jQuery, and PHP.</p>
         <p>This site was built with HTML5, CSS3, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p>
         <a href="#">See GitHub repository.</a>
       </div>
       <div class="text-column">
         <h2>Design</h2>
-        <!--<p>Paper <br>Adobe Suite <br>In-Browser <br>Responsive + User-Aware</p><br>-->
         <p>I use grid paper, pencils, and Adobe Creative Suite for my visual designs.</p>
         <p>I designed this site with layout sprints, Illustrator mockups, and an in-browser iterative approach.</p>
-        <a href="#">See site sketches.</a>
+        <!--<a href="#">See site sketches.</a>-->
       </div>
-      <div class="text-column">
+      <div class="text-column column-etc">
         <h2>&c.</h2>
-        <span>Email </span><a class="email" href="#">hello@miri.codes</a><br>
+        <span>Email </span><a class="email" href="mailto:hello@miri.codes">hello@miri.codes</a><br>
         <span>Twitter </span><a class="twitter" href="#">@antimytheme</a><br>
         <span>GitHub </span><a class="github" href="#">mknadler</a>
       </div>
