cleans up sass, adds comments

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <title>miri.codes</title>
     <meta name="description" content="Miriam Nadler | Web Portfolio">
+
+
+
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
+    <meta property="og:title" content="miri.codes | Web Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://miri.codes" />
+    <meta property="og:image" content="http://miri.codes/images/icon.png" />
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -42,19 +50,19 @@
         <h2>Code</h2>
         <p>I code in HTML5, CSS3/Sass, JavaScript/jQuery, and PHP.</p>
         <p>This site was built with HTML5, CSS3, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p>
-        <a href="#">See GitHub repository.</a>
+        <a href="https://github.com/mknadler/portfolio-november-2014/">See GitHub repository.</a>
       </div>
       <div class="text-column">
         <h2>Design</h2>
         <p>I use grid paper, pencils, and Adobe Creative Suite for my visual designs.</p>
         <p>I designed this site with layout sprints, Illustrator mockups, and an in-browser iterative approach.</p>
-        <!--<a href="#">See site sketches.</a>-->
+        <a href="/portfolio_mocks.svg">See site sketches.</a>
       </div>
       <div class="text-column column-etc">
         <h2>&c.</h2>
         <span>Email </span><a class="email" href="mailto:hello@miri.codes">hello@miri.codes</a><br>
-        <span>Twitter </span><a class="twitter" href="#">@antimytheme</a><br>
-        <span>GitHub </span><a class="github" href="#">mknadler</a>
+        <span>Twitter </span><a class="twitter" href="https://twitter.com/antimytheme">@antimytheme</a><br>
+        <span>GitHub </span><a class="github" href="https://github.com/mknadler">mknadler</a>
       </div>
     </section>
     <section class="projects">
@@ -62,22 +70,22 @@
       <div class="project project-blaudit">
         <span>Blazing Audit</span>
         <p>Design & Development. <br>Custom WordPress site for a small business.</br></p>
-        <a href="#">View site</a>
+        <a href="http://www.blazingaudit.com">View site</a>
       </div>
         <div class="project project-sunlight">
         <span>How Much Sunlight</span>
         <p>Design & Development. <br>Calculates amount of sunlight remaining in the day.</br></p>
-        <a href="#">View site</a>
+        <a href="http://www.howmuchsunlight.com">View site</a>
       </div>
       <div class="project project-modular">
         <span>Modular Tone</span>
         <p>Design. <br>Representing sound in shape and shape in sound.</br></p>
-        <a href="#">View site</a>
+        <a href="http://www.modulartone.com">View site</a>
       </div>
       <div class="project project-mkopas">
         <span>mkopas.net</span>
         <p>Design & Development. <br>Portfolio site for a game designer.</br></p>
-        <a href="#">View site</a>
+        <a href="http://mkopas.net">View site</a>
       </div>
     </section>
     <footer></footer>
@@ -89,14 +97,14 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!-- Google Analytics-->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
+      ga('create','UA-50390525-3');ga('send','pageview');
     </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
