Beginning to script header animations using <blink> (j/k)

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
       <header>
         <div class="intro">
           <h1 id="header-actual">Miri.Codes</h1>
-          <p><span>That's me. My name is Miriam Nadler.</span><br> <span>I code. I also design.</span><br> <span>I'm especially interested in typography, Sass, and user-aware design methodologies.</span></p>
+          <p>That's me. My name is Miriam Nadler.<br> I code. I also design.<br> I'm especially interested in typography,<br> Sass, and user-aware design methodologies.</p>
         </div>
         <!--
         <div id="ghost"></div>
