JSON loading for portfolio items

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <title>miri.codes</title>
     <meta name="description" content="Miriam Nadler | Web Portfolio">
-
-
-
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <meta property="og:title" content="miri.codes | Web Portfolio" />
@@ -40,11 +37,9 @@
           <h1 id="header-actual">Miri.Codes</h1>
           <p>That's me. My name is Miriam Nadler.<br> I code. I also design.<br> I'm especially interested in typography,<br> Sass, and user-aware design methodologies.</p>
         </div>
-        <!--
         <div id="ghost"></div>
         <div class="intro-mirror">
         </div>
-      -->
       </header>
       <div class="text-column">
         <h2>Code</h2>
@@ -59,7 +54,7 @@
         <a href="/portfolio_mocks.svg">See site sketches.</a>
       </div>
       <div class="text-column column-etc">
-        <h2>&c.</h2>
+        <h2>&amp;c.</h2>
         <span>Email </span><a class="email" href="mailto:hello@miri.codes">hello@miri.codes</a><br>
         <span>Twitter </span><a class="twitter" href="https://twitter.com/antimytheme">@antimytheme</a><br>
         <span>GitHub </span><a class="github" href="https://github.com/mknadler">mknadler</a>
@@ -74,17 +69,17 @@
       </div>
         <div class="project project-sunlight">
         <span>How Much Sunlight</span>
-        <p>Design & Development. <br>Calculates amount of sunlight remaining in the day.</br></p>
+        <p>Design & Development. <br>Calculates amount of sunlight remaining in the day.</p>
         <a href="http://www.howmuchsunlight.com">View site</a>
       </div>
       <div class="project project-modular">
         <span>Modular Tone</span>
-        <p>Design. <br>Representing sound in shape and shape in sound.</br></p>
+        <p>Design. <br>Representing sound in shape and shape in sound.</p>
         <a href="http://www.modulartone.com">View site</a>
       </div>
       <div class="project project-mkopas">
         <span>mkopas.net</span>
-        <p>Design & Development. <br>Portfolio site for a game designer.</br></p>
+        <p>Design & Development. <br>Portfolio site for a game designer.</p>
         <a href="http://mkopas.net">View site</a>
       </div>
     </section>
