--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,7 @@
           <h1 id="header-actual">Miri.Codes</h1>
           <p>That's me. My name is Miriam Nadler.<br> I code. I also design.<br> I'm especially interested in typography,<br> Sass, and user-aware design methodologies.</p>
         </div>
-        <div id="ghost"></div>
-        <div class="intro-mirror">
+        <div id="ghost">
         </div>
       </header>
       <div class="text-column">
