--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+<!-- TODO: BEMify (better) -->
+
     <section class="top">
       <header>
         <div class="intro">
