Refactored very spooky JavaScript

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,14 @@
 <!doctype html>
 <html class="no-js">
+  <!-- 
+      _          _  _            __       _                _  _ 
+     | |_   ___ | || | ___      / _| _ _ (_) ___  _ _   __| || |
+     | ' \ / -_)| || |/ _ \ _  |  _|| '_|| |/ -_)| ' \ / _` ||_|
+     |_||_|\___||_||_|\___/( ) |_|  |_|  |_|\___||_||_|\__,_|(_)
+                           |/    
+      github repo: https://github.com/mknadler/portfolio-november-2014
+      cute picture of a cat: http://i.imgur.com/7BhYSjI.jpg        
+  -->                               
   <head>
     <meta charset="utf-8">
     <title>miri.codes</title>
