--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
       </div>
     </section>
     <section class="projects">
-      <h1>Projects</h1>
+      <h1>Selected Projects</h1>
       <div class="project project-blaudit">
         <span>Blazing Audit</span>
         <p>Design & Development. <br>Custom WordPress site for a small business.</br></p>
