--- a/app/index.html
+++ b/app/index.html
@@ -46,14 +46,14 @@
       <header>
         <div class="intro">
           <h1 id="header-actual">Miri.Codes</h1>
-          <p>That's me. My name is Miriam Nadler.<br> I code. I also design.<br> I'm especially interested in typography,<br> Sass, and user-aware design methodologies.</p>
+          <p>That's me. My name is Miriam Nadler.<br> I'm especially interested in typography,<br> Sass,  and trying to evoke delight<br>via web technologies.</p>
         </div>
         <div id="ghost">
         </div>
       </header>
       <div class="text-column">
         <h2>Code</h2>
-        <p>I code in HTML5, CSS3/Sass, JavaScript/jQuery, and PHP.</p>
+        <p>Languages: HTML5, CSS3/Sass, JavaScript, PHP.</p><p>Tools/Frameworks: jQuery, Meteor, WordPress.</p>
         <p>This site was built with HTML5, CSS3, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p>
         <a href="https://github.com/mknadler/portfolio-november-2014/">See GitHub repository.</a>
       </div>
@@ -72,6 +72,11 @@
     </section>
     <section class="projects">
       <h1>Selected Projects</h1>
+      <div class="project project-colorstreamer">
+        <span>Colorstreamer</span>
+        <p>Design & Development. <br>Real-time multiuser colorpicker, built in Meteor.js.</br></p>
+        <a href="http://colorstreamer.meteor.com">View site</a>
+      </div>
       <div class="project project-blaudit">
         <span>Blazing Audit</span>
         <p>Design & Development. <br>Custom WordPress site for a small business.</br></p>
