new animations, ui tweaks, refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -53,8 +53,9 @@
       </header>
       <div class="text-column">
         <h2>Code</h2>
-        <p>Languages: HTML5, CSS3/Sass, JavaScript, PHP.</p><p>Tools/Frameworks: jQuery, Meteor, WordPress.</p>
-        <p>This site was built with HTML5, CSS3, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p>
+        <p>Languages: HTML5, CSS3/Sass, JavaScript, PHP.</p>
+        <p>Tools/Frameworks: jQuery, Meteor, WordPress.</p>
+        <p>This site was built with HTML5, CSS, Sass, Bourbon + Neat, JavaScript, Grunt, Bower, and Yeoman.</p>
         <a href="https://github.com/mknadler/portfolio-november-2014/">See GitHub repository.</a>
       </div>
       <div class="text-column">
@@ -69,9 +70,12 @@
         <span>Twitter </span><a class="twitter" href="https://twitter.com/antimytheme">@antimytheme</a><br>
         <span>GitHub </span><a class="github" href="https://github.com/mknadler">mknadler</a>
       </div>
+
     </section>
     <section class="projects">
-      <h1>Selected Projects</h1>
+      <div class="section-header">
+        <h1>Projects</h1>
+      </div>
       <div class="project project-colorstreamer">
         <span>Colorstreamer</span>
         <p>Design & Development. <br>Real-time multiuser colorpicker, built in Meteor.js.</br></p>
@@ -98,7 +102,19 @@
         <a href="http://mkopas.net">View site</a>
       </div>
     </section>
-    <footer></footer>
+    <!--<section class="animation">
+
+    </section>-->
+    <footer>
+      <section class="footer-links">
+        <ul>
+          <li><a href="mailto:hello@miri.codes">email</a></li></a>
+          <li><a href="https://twitter.com/antimytheme">twitter</a></li></a>
+          <li><a href="http://codepen.io/mknadler/">codepen</a></li></a>
+          <li><a href="http://github.com/mknadler">github</a></li></a>
+        </ul>
+      </section>
+    </footer>
 
 
     <!-- build:js(.) scripts/vendor.js -->
