Working on revision

--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html class="no-js">
-  <!-- 
-      _          _  _            __       _                _  _ 
+  <!--
+      _          _  _            __       _                _  _
      | |_   ___ | || | ___      / _| _ _ (_) ___  _ _   __| || |
      | ' \ / -_)| || |/ _ \ _  |  _|| '_|| |/ -_)| ' \ / _` ||_|
      |_||_|\___||_||_|\___/( ) |_|  |_|  |_|\___||_||_|\__,_|(_)
-                           |/    
+                           |/
       github repo: https://github.com/mknadler/portfolio-november-2014
-      cute picture of a cat: http://i.imgur.com/7BhYSjI.jpg        
-  -->                               
+      cute picture of a cat: http://i.imgur.com/7BhYSjI.jpg
+  -->
   <head>
     <meta charset="utf-8">
     <title>miri.codes</title>
@@ -51,7 +51,7 @@
         <div id="ghost">
         </div>
       </header>
-      <div class="text-column">
+      <!--<div class="text-column">
         <h2>Code</h2>
         <p>Languages: HTML5, CSS3/Sass, JavaScript, PHP.</p>
         <p>Tools/Frameworks: jQuery, Meteor, WordPress.</p>
@@ -64,11 +64,13 @@
         <p>I designed this site with layout sprints, Illustrator mockups, and an in-browser iterative approach.</p>
         <a href="/portfolio_mocks.svg">See site sketches.</a>
       </div>
+    -->
       <div class="text-column column-etc">
-        <h2>&amp;c.</h2>
-        <span>Email </span><a class="email" href="mailto:hello@miri.codes">hello@miri.codes</a><br>
-        <span>Twitter </span><a class="twitter" href="https://twitter.com/antimytheme">@antimytheme</a><br>
-        <span>GitHub </span><a class="github" href="https://github.com/mknadler">mknadler</a>
+        <h2>contact</h2>
+        <a class="" href="mailto:hello@miri.codes">Email: hello@miri.codes</a>
+        <a class="" href="https://twitter.com/antimytheme">Twitter: @antimytheme</a>
+        <a href="https://github.com/mknadler">GitHub: mknadler</a>
+        <a class="codepen" href="http://codepen.io/mknadler/">CodePen: mknadler</a>
       </div>
 
     </section>
